# ptiXphinma

pti-phinma-py-master/: Dockerfile  README.md  docker-compose.yml  prod.env.sample  pyproject.toml  staging.env.sample
pti-phinma-py-master/app/: settings.py  urls.py
pti-phinma-py-master/web/: adapter.py  forms.py  urls.py  views.py
pti-phinma-py-master/web/static/web/js/: minivue.js  scripts.js
pti-phinma-py-master/web/templates/web/: base.html  cancel.html  index.html  instructions.html  response.html
